--- a/myapp/templates/authorization/login.html
+++ b/myapp/templates/authorization/login.html
@@ -13,9 +13,9 @@
 <body>
     <div class="main w-full h-screen  bg-gradient-to-r from-violet-500 to-fuchsia-500  flex flex-col justify-center items-center" >
       
-        <div class="login h-[80vh] w-[40vw] lg:h-[90vh] lg:w-[30vw]  rounded-[2vw] bg-white flex flex-col justify-evently items-center">
-        <div class="leftdiv  h-[20vh] ">
-            <img src="{% static 'images/admin-photo2.png' %}" alt="Admin" class="w-[15vw]">
+        <div class="login h-[87vh] w-[90vw] lg:h-[90vh] lg:w-[30vw]  rounded-[2vw] bg-white flex flex-col justify-evently items-center">
+        <div class="leftdiv  h-[20vh] mt-8">
+            <img src="{% static 'images/admin-photo2.png' %}" alt="Admin" class="w-[40vw] lg:w-[15vw]">
 
         </div>
         <div class="rightdiv h-screen  ">
@@ -80,3 +80,5 @@
     
 </body>
 </html>
+
+<!-- bg-gradient-to-r from-violet-500 to-fuchsia-500  -->
