--- a/myapp/templates/authorization/login.html
+++ b/myapp/templates/authorization/login.html
@@ -28,22 +28,25 @@
 
             <div class="userpassdiv flex flex-col justify-between items-center gap-8">
                 <div class="flex flex-col justify-start gap-4">
-                <label for="username" class="font-bold ">Username : </label>
+                <label for="username" class="font-bold text-xl">Username : </label>
                 <div class="  w-[60%] ">
              
                     <p class="">{{ form.username }}</p>
                 </div>
             </div>
-            <div class="flex flex-col justify-start gap-4">
-                <label for="password" class="font-bold ">Password : </label>
-                <div class="password-container bg-white  w-[60%] relative">
-                
-               
-                    <p class="">{{ form.password }}
-                        <!-- <span class="password-toggle-icon"><i class="fas fa-eye"></i></span> -->
-                    </p>
-                </div>
-            </div>
+            <div class="flex flex-col relative">
+                <!-- <div class="flex flex-col justify-start gap-4"> -->
+                    <label for="username" class="font-bold text-xl">Password : </label>
+                <p class="mt-2">{{ form.password }}</p>
+                <span class="absolute inset-y-0 right-0 pr-3 mt-8 flex items-center text-sm leading-5 cursor-pointer" onclick="togglePasswordVisibility()">
+                  <!-- Use an inline SVG for the eye icon -->
+                  <svg id="eye-icon" class="h-5 w-5 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                    <path d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+                  </svg>
+                </span>
+                <!-- </div> -->
+              </div>
                 <div class="buttondiv w-full flex flex-col gap-2 justify-center items-center">
                     <button class="bg-blue-700 text-white  px-12 py-2 rounded-full">Login</button>
                     <div><p id="error-message" class="text-black font-bold "></p></div>
@@ -60,23 +63,28 @@
      </div>
     </div>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- <script>
-        const passwordField = document.getElementById("password");
-        const togglePassword = document.querySelector(".password-toggle-icon i");
-        
-        togglePassword.addEventListener("click", function () {
-          if (passwordField.type === "password") {
-            passwordField.type = "text";
-            togglePassword.classList.remove("fa-eye");
-            togglePassword.classList.add("fa-eye-slash");
-          } else {
-            passwordField.type = "password";
-            togglePassword.classList.remove("fa-eye-slash");
-            togglePassword.classList.add("fa-eye");
-          }
-        });
-        </script> -->
+    
         <script  src="{% static 'js/login.js' %}"></script>
+        <script>
+            function togglePasswordVisibility() {
+                const passwordField = document.querySelector('input[name="password"]');
+                const eyeIcon = document.getElementById('eye-icon');
+                
+                if (passwordField.type === 'password') {
+                    passwordField.type = 'text';
+                    eyeIcon.innerHTML = `
+                        <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                        <path d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+                    `;
+                } else {
+                    passwordField.type = 'password';
+                    eyeIcon.innerHTML = `
+                        <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                        <path d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+                    `;
+                }
+            }
+            </script>
     
 </body>
 </html>
