--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -44,7 +44,7 @@
 
   {% block content %}
 <div class="maintablediv w-full h-[100vh] lg:w-[75vw] lg:h-screen  flex flex-col justify-center items-center pr-10 gap-4">
-    <div class="w-full flex lg:flex-row gap-16 justify-end">
+    <div class="w-full flex lg:flex-row gap-20 justify-end">
     <div class="registerdiv w-[50vw] h-[9vh] lg:h-[9vh] lg:w-[25vw] bg-gray-200 flex justify-center items-center  border rounded-[1vw]">
         <button id="openmodal"><h1 class="font-medium text-sm lg:text-xl">REGISTER A NEW HOSPITAL</h1></button>
 
@@ -186,9 +186,9 @@
                         <td class="px-6 py-4 whitespace-nowrap font-bold">{{ forloop.counter }}</td>
                         <td class="px-4 py-4 whitespace-nowrap">{{ hospital.name }}</td>
                         <td class="px-4 py-4 whitespace-nowrap">{{ hospital.amount }}</td>
-                        <td class="px-4 py-4 whitespace-nowrap">{{ hospital.registration_date|date:"d/m/Y" }}</td>
+                        <td class="px-4 py-4 whitespace-nowrap">{{ hospital.registration_date|date:"d-m-Y" }}</td>
                        
-                        <td class="px-4 py-4 whitespace-nowrap">{{ hospital.renewal_date|date:"d/m/Y" }}</td>
+                        <td class="px-4 py-4 whitespace-nowrap">{{ hospital.renewal_date|date:"d-m-Y" }}</td>
                         <td class="px-4 py-4 whitespace-nowrap">
                             {% if hospital.is_renewed %}
                             <span class="text-green-800">Renewed</span>
@@ -211,7 +211,7 @@
                     </tr>
                     {% endfor %}
                 </tbody>
-            </table>
+             </table>
             {% else %}
             <p class="text-center mt-4 font-medium text-xl">No hospitals found.</p>
             {% endif %}
@@ -279,8 +279,6 @@
         </form>
     </div>
   </div>
-  
-
 </div>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
