blocked and expired

--- a/myapp/templates/authorization/login.html
+++ b/myapp/templates/authorization/login.html
@@ -11,7 +11,7 @@
     <title>Login</title>
 </head>
 <body>
-    <div class="main w-full h-screen  bg-gradient-to-r from-violet-500 to-fuchsia-500  flex flex-col justify-center items-center" >
+    <div class="main w-full h-screen  bg-gradient-to-r from-blue-300 to-fuchsia-400  flex flex-col justify-center items-center" >
       
         <div class="login h-[87vh] w-[90vw] lg:h-[90vh] lg:w-[30vw]  rounded-[2vw] bg-white flex flex-col justify-evently items-center">
         <div class="leftdiv  h-[20vh] mt-8">
