--- a/myapp/templates/expiring_soon.html
+++ b/myapp/templates/expiring_soon.html
@@ -1,17 +1,19 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 {% load static %}
+
+{% block title %}Expiring Soon{% endblock %}
 {% block content %}
 
 
 
-<div class="maintablediv w-full h-[100vh] lg:w-[75vw] lg:h-screen  flex flex-col justify-center items-center pr-10 gap-4">
+
     <div class="registerdiv w-[50vw] h-[9vh] lg:h-[9vh] lg:w-[25vw] bg-gray-200 flex justify-center items-center  border rounded-[1vw]">
         <h1 class="font-medium text-sm lg:text-xl">EXPIRING  SOON</h1>
 
     </div>
    
-<div class="tablediv w-full h-[90vh] lg:w-[72vw] lg:h-[80vh]   bg-gray-200 rounded-[2vw]">
-    <div class="overflow-x-auto overflow-y-auto mt-8 h-[70vh]  bg-gray-200">
+<div class="tablediv w-full h-[90vh] lg:w-[72vw] lg:h-[80vh]   bg-gray-200 rounded-[2vw] ">
+    <div class=" mt-8 h-[70vh]  bg-gray-200 overflow-x-auto overflow-y-auto">
         {% if hospital_list %}
         <table class="table w-full divide-y divide-gray-400">
             <!-- Table head -->
@@ -23,7 +25,7 @@
                     <th class="px-6 py-3 text-left text-sm leading-4 font-bold text-black whitespace-nowrap uppercase tracking-wider">DATE OF REGISTER</th>
                     <th class="px-6 py-3 text-left text-sm leading-4 font-bold text-black whitespace-nowrap  uppercase tracking-wider">DATE OF RENEWAL</th>
                     <th class="px-6 py-3 text-left text-sm leading-4 font-bold text-black uppercase tracking-wider">RENEW</th>
-                    <th class="px-6 py-3 text-left text-sm leading-4 font-bold text-black uppercase tracking-wider">ACTION
+                    <th class="px-6 py-3 text-left text-sm leading-4 font-bold text-black uppercase tracking-wider">ACTION</th>
             </thead>
             <!-- Table body -->
             <tbody class=" divide-y divide-gray-400">
@@ -32,38 +34,43 @@
                     <td class="px-6 py-4 whitespace-nowrap font-bold">{{ forloop.counter }}</td>
                     <td class="px-6 py-4 whitespace-nowrap">{{ hospital.name }}</td>
                     <td class="px-6 py-4 whitespace-nowrap">{{ hospital.amount }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap">{{ hospital.registration_date|date:"d-m-Y" }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap">{{ hospital.renewal_date|date:"d-m-Y" }}</td>
+                    <td class="px-4 py-4 whitespace-nowrap">
+                        {% if hospital.subscript == 'Temporary' %}
+                        Temporary
+                    {% else %}
+                        {{ hospital.registration_date|date:"d-m-Y" }}
+                    {% endif %}
+                    </td>
+                    <td class="px-4 py-4 whitespace-nowrap">
+                        {% if hospital.subscript == 'Temporary' %}
+                            Temporary
+                        {% else %}
+                            {{ hospital.renewal_date|date:"d-m-Y" }}
+                        {% endif %}
+                    </td>
                   
                         <td class="px-4 py-4 whitespace-nowrap">
                             {% if hospital.is_renewed %}
-                            <span class="text-green-800">Renewed</span>
+                            <span class="text-green-800 font-medium">Renewed</span>
                             {% else %}
-                            <span class="text-yellow-800">Pending</span>
+                            <span class="text-yellow-800 font-medium">Pending</span>
                             {% endif %}
                         </td>
                    
                     <td class="px-6 py-4 whitespace-nowrap">
-                        <button type="button" id="edit-button"   data-id="{{ hospital.pk }}"
-                        data-name="{{ hospital.name }}"
-                        data-phone="{{ hospital.phone }}"
-                        data-email="{{ hospital.email }}"
-                        data-subscript="{{ hospital.subscript }}"
-                        data-amount="{{ hospital.amount }}"
-                        data-registration-date="{{ hospital.registration_date|date:'d-m-Y' }}"
-                        data-renewal-date="{{ hospital.renewal_date|date:'d-m-Y' }}"> <i class="fa-solid fa-file-pen ms-3"></i></button>
-                        <button type="button" class="delete-button" data-href="{% url 'delete-expiring' hospital.pk %}"><i class="fa-solid fa-trash ms-2"></i></button>
+                        <button type="button" class="delete-button" data-href="{% url 'delete' hospital.pk %}"><i class="fa-solid fa-trash ms-2"></i></button>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
         {% else %}
-        <p class="text-center mt-4 font-medium text-xl">No hospitals are expiring soon found.</p>
+        <p class="text-center mt-4 font-medium text-xl">No hospitals are Expiring soon.</p>
         {% endif %}
        </div>
     </div>
-</div>
+
+
 {% endblock %}
 
 
